# darwinia

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_CN.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.claude/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.openclaw/: SKILL.md
benchmarks/: benchmark_archetypes.py
darwinia/: __init__.py  __main__.py
darwinia/analytics/: population.py
darwinia/arena/: adversary.py  arena.py  tournament.py
darwinia/backtest/: __init__.py  engine.py  metrics.py
darwinia/benchmark/: __init__.py  baselines.py
darwinia/chronicle/: recorder.py  speciation.py
darwinia/core/: agent.py  dna.py  market.py  types.py
darwinia/correlation/: __init__.py  matrix.py
darwinia/data/: fetcher.py
darwinia/discovery/: analyzer.py  asset_scanner.py  explainer.py
darwinia/ensemble/: __init__.py  committee.py
darwinia/evolution/: engine.py  fitness.py  population.py
darwinia/fingerprint/: __init__.py  (+1 more)
dashboard/: app.py
data/: README.md  btc_1h.csv
docs/: ARCHITECTURE.md  DNA_ENCODING.md  OPENCLAW.md  demo_output.txt  install.md
examples/: custom_fitness.py  explain_agent.py  run_arena.py  run_evolution.py  walk_forward.py
notebooks/: quickstart.ipynb
scripts/: monitor_competitors.py
tests/: test_analytics.py  test_arena.py  test_backtest.py  test_benchmark.py  test_correlation.py  test_data.py  test_dna.py  test_ensemble.py  test_evolution.py  test_fingerprint.py  test_integrations.py  test_knowledge.py  test_macro.py  test_montecarlo.py  test_personality.py  test_portfolio.py  test_regime.py  test_repair.py  test_scanner.py  test_tournament.py  test_validation.py
(+19 files in other folders)
