[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darwinia"
version = "1.0.0"
description = "The Self-Evolving Agent Ecosystem — Trading agents that evolve through Darwinian selection and adversarial self-play"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "0xSanei", email = "sanei@0xsanei.com"},
]
keywords = [
    "genetic-algorithm", "evolution", "trading", "adversarial",
    "openclaw", "ai-agent", "backtesting", "crypto",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]
dashboard = ["streamlit>=1.30.0", "plotly>=5.18.0"]
all = ["darwinia[dev,dashboard]"]

[project.urls]
Homepage = "https://github.com/0xSanei/darwinia"
Documentation = "https://github.com/0xSanei/darwinia/tree/main/docs"
Repository = "https://github.com/0xSanei/darwinia"
Issues = "https://github.com/0xSanei/darwinia/issues"

[project.scripts]
darwinia = "darwinia.__main__:main"

[tool.setuptools.packages.find]
include = ["darwinia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
